--- a/template/css/style.css
+++ b/template/css/style.css
@@ -967,10 +967,8 @@ h4 small {
 }
 
 #regist {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 #regist .right-image {
@@ -1022,7 +1020,7 @@ h4 small {
 
 /* 
 ---------------------------------------------
-Register
+Reegister
 --------------------------------------------- 
 */
 
@@ -1085,22 +1083,6 @@ Register
   width: 100%; display:block; 
 }
 
-.register { 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -150px 0 0 -150px;
-}
-.register h1 { 
-  color: rgb(253, 253, 253); 
-  letter-spacing:1px;   
-  text-align:center;
-  text-shadow: 2px 4px #0a0a0b;
-  padding-bottom: 15px;
-  margin-left: -30px;
-  margin-top: -50px;
-}
-
 input { 
   width: 100%; 
   margin-bottom: 10px; 
@@ -1108,14 +1090,11 @@ input {
   border: none;
   outline: none;
   padding: 10px;
+  font-size: 13px;
+  color: #0d0c0c;
   border-radius: 4px;
   box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
   transition: box-shadow .5s ease;
-}
-
-.form-control {
-  font-size: 13px;
-  color: #0d0c0c;
 }
 
 /* 
@@ -1670,3 +1649,136 @@ preloader
     opacity: 0;
   }
 }
+
+
+/*
+ * Base structure
+ */
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  padding-top: 50px;
+}
+
+
+/*
+ * Global add-ons
+ */
+
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+/*
+ * Top navigation
+ * Hide default border to remove 1px line.
+ */
+.navbar-fixed-top {
+  border: 0;
+}
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a,
+.nav-sidebar > .active > a:hover,
+.nav-sidebar > .active > a:focus {
+  color: #fff;
+  background-color: #428bca;
+}
+
+
+/*
+ * Main content
+ */
+
+.main {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
+}
+
+
+/*
+ * Placeholder dashboard ideas
+ */
+
+.placeholders {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.placeholders h4 {
+  margin-bottom: 0;
+}
+.placeholder {
+  margin-bottom: 20px;
+}
+.placeholder img {
+  display: inline-block;
+  border-radius: 50%;
+}
+
+div#container {
+  width: 580px;
+  margin: 100px auto 0 auto;
+  padding: 20px;
+  background: #000;
+  border: 1px solid #1a1a1a;
+}
+
+/* HOVER STYLES */
+div#pop-up {
+  display: none;
+  position: absolute;
+  width: 450px;
+  padding: 10px;
+  color: #000000;
+  font-size: 90%;
+}
+
+.button {
+    background-color: transparent;    
+    border: none;
+    color: black;
+    cursor: pointer;
+}
+
