--- a/template/css/style.css
+++ b/template/css/style.css
@@ -826,6 +826,163 @@ TRY IT ... with or without CENTER CENTER
 
 /*
 ---------------------------------------------
+Navigation List Item
+---------------------------------------------
+*/
+
+.section-sub-nav .sub-nav .list-nav {
+  margin-top: 30px;
+  margin-left: 0px;
+  margin-right: 0px;
+  text-transform: uppercase;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: relative;
+  z-index: 999;;
+}
+
+.section-sub-nav .sub-nav .list-nav li {
+  float: left;
+  margin-left: 100px;
+  margin-right: auto;
+}
+
+.section-sub-nav .sub-nav .list-nav li a {
+  display: block;
+  font-weight: 500;
+  font-size: 13px;
+  height: 40px;
+  padding: 5px;
+  letter-spacing: 1px;
+}
+
+@media (max-width: 1200px) {
+  .section-sub-nav .sub-nav .nav li {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+
+@media (max-width: 991px) {
+  .section-sub-nav {
+    height: 50px;
+    box-shadow: none;
+    text-align: center;
+  }
+  .section-sub-nav .container {
+    padding: 0px;
+  }
+  
+  .section-sub-nav .sub-nav {
+    overflow: hidden;
+  }
+
+  .section-sub-nav .sub-nav .list-nav {
+    width: 100%;
+    margin-top: 50px !important;
+    display: none;
+    -webkit-transition: all 0s ease 0s;
+    -moz-transition: all 0s ease 0s;
+    -o-transition: all 0s ease 0s;
+    transition: all 0s ease 0s;
+    margin-left: 0px;
+  }
+
+  .section-sub-nav .sub-nav .list-nav li {
+    border-top: 1px solid #eee;
+    float: left;
+  }
+
+  .section-sub-nav .sub-nav .list-nav li a {
+    height: 50px !important;
+    line-height: 50px !important;
+    padding: 0px !important;
+    border: none !important;
+  }
+}
+  
+@media (min-width: 992px) {
+  .section-sub-nav .sub-nav .list-nav {
+    display: flex !important;
+  }
+}
+
+/*
+---------------------------------------------
+List Item
+---------------------------------------------
+*/
+.custom-table {
+  min-width: 900px; }
+  .custom-table thead tr, .custom-table thead th {
+    padding-bottom: 30px;
+    border-top: none;
+    border-bottom: none !important;
+    color: #000;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: .2rem; }
+  .custom-table tbody th, .custom-table tbody td {
+    color: #777;
+    font-weight: 400;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    font-weight: 300;
+    border: none;
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease; }
+    .custom-table tbody th small, .custom-table tbody td small {
+      color: rgba(255, 255, 255, 0.3);
+      font-weight: 300; }
+    .custom-table tbody th a, .custom-table tbody td a {
+      color: rgba(255, 255, 255, 0.3); }
+    .custom-table tbody th .more, .custom-table tbody td .more {
+      color: rgba(255, 255, 255, 0.3);
+      font-size: 11px;
+      font-weight: 900;
+      text-transform: uppercase;
+      letter-spacing: .2rem; }
+  .custom-table tbody tr {
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease; }
+    .custom-table tbody tr:hover td, .custom-table tbody tr:focus td {
+      color: #fff; }
+      .custom-table tbody tr:hover td a, .custom-table tbody tr:focus td a {
+        color: #fdd114; }
+      .custom-table tbody tr:hover td .more, .custom-table tbody tr:focus td .more {
+        color: #fdd114; }
+  .custom-table .td-box-wrap {
+    padding: 0; }
+  .custom-table .box {
+    background: #fff;
+    border-radius: 4px;
+    margin-top: 15px;
+    margin-bottom: 15px; }
+    .custom-table .box td, .custom-table .box th {
+      border: none !important; }
+
+
+.panel {
+  margin-top: -30px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 1px solid transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+
+
+/*
+---------------------------------------------
 news
 ---------------------------------------------
 */
