Update CSS For Mobile

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -137,7 +137,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0px;
+  margin-top: 50px;
   margin-bottom: 0px;
 }
 
@@ -384,7 +384,7 @@ header
   padding-right: 35px;
 }
 
-.  .main-nav .nav li.submenu:after {
+.main-nav .nav li.submenu:after {
   font-family: FontAwesome;
   content: "\f107";
   font-size: 12px;
@@ -792,7 +792,7 @@ TRY IT ... with or without CENTER CENTER
 
 @media (max-width: 765px) {
   .welcome-area {
-    margin-bottom: 100px;
+    margin-bottom: 50px;
   }
   .welcome-area .header-text {
     top: 55% !important;
@@ -839,7 +839,6 @@ Navigation List Item
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  position: relative;
   z-index: 999;;
 }
 
@@ -867,8 +866,6 @@ Navigation List Item
 
 @media (max-width: 991px) {
   .section-sub-nav {
-    height: 50px;
-    box-shadow: none;
     text-align: center;
   }
   .section-sub-nav .container {
@@ -876,13 +873,13 @@ Navigation List Item
   }
   
   .section-sub-nav .sub-nav {
-    overflow: hidden;
+    
   }
 
   .section-sub-nav .sub-nav .list-nav {
     width: 100%;
-    margin-top: 50px !important;
-    display: none;
+    margin-top: 30px;
+    display: block;
     -webkit-transition: all 0s ease 0s;
     -moz-transition: all 0s ease 0s;
     -o-transition: all 0s ease 0s;
@@ -906,6 +903,19 @@ Navigation List Item
 @media (min-width: 992px) {
   .section-sub-nav .sub-nav .list-nav {
     display: flex !important;
+    align-content: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+}
+
+@media (max-width: 765px) {
+  .section-sub-nav .sub-nav .list-nav {
+    width: 100%;
+    margin-top: 0px;
+    overflow: hidden;
   }
 }
 
@@ -986,10 +996,6 @@ List Item
 news
 ---------------------------------------------
 */
-
-.text-right {
-
-}
 
 .panel {
   margin-top: -30px;
