--- a/template/css/style.css
+++ b/template/css/style.css
@@ -137,8 +137,9 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 50px;
+  margin-top: 100px;
   margin-bottom: 0px;
+  text-align: center;
 }
 
 ul {
@@ -872,10 +873,6 @@ Navigation List Item
     padding: 0px;
   }
   
-  .section-sub-nav .sub-nav {
-    
-  }
-
   .section-sub-nav .sub-nav .list-nav {
     width: 100%;
     margin-top: 30px;
