--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1260,6 +1260,32 @@ input {
 
 /* 
 ---------------------------------------------
+Login
+--------------------------------------------- 
+*/
+
+.login {
+  min-height: 100vh;
+}
+
+.bg-image {
+  background-image: url(../images/gallery/Barner-2.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.login-heading {
+  font-weight: 300;
+}
+
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+}
+
+/* 
+---------------------------------------------
 services
 --------------------------------------------- 
 */
